# Game-Of-Life

./: .gitignore  CMakeLists.txt  Makefile  README.MD  build.bat
src/: main.cpp
src/include/Grid/: Grid.cpp  Grid.hpp
src/include/Log/: Log.cpp  Log.hpp
src/include/Render/: Render.cpp  Render.hpp
src/include/Simulation/: Simulation.cpp  Simulation.hpp
